crates/ruff_python_parser/tests/snapshots/invalid_syntax@unparenthesized_walrus_index_before_310.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/unparenthesized_walrus_index_before_310.py
---
## AST

```
Module(
    ModModule {
        range: 0..53,
        body: [
            Expr(
                StmtExpr {
                    range: 43..52,
                    value: Subscript(
                        ExprSubscript {
                            range: 43..52,
                            value: Name(
                                ExprName {
                                    range: 43..46,
                                    id: Name("lst"),
                                    ctx: Load,
                                },
                            ),
                            slice: Named(
                                ExprNamed {
                                    range: 47..51,
                                    target: Name(
                                        ExprName {
                                            range: 47..48,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    value: NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 50..51,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Unsupported Syntax Errors

  |
1 | # parse_options: {"target-version": "3.9"}
2 | lst[x:=1]
  |     ^^^^ Syntax Error: Cannot use unparenthesized assignment expression on Python 3.9 (syntax was added in Python 3.10)
  |
